fix monaco overflow bug, fix kpi container overflow bug, change background color, add background as global css variable, remove css of dummy, more use of felxboxes

--- a/src/style/charts.module.css
+++ b/src/style/charts.module.css
@@ -24,35 +24,33 @@
 
 .elementWrapper{
     display: flex;
+    flex-direction: column;
     justify-Content: center;
-    align-items: center;
+    align-items: stretch; 
     height: 100%;
     width: 100%;
 }
 
 .chartContainer{
-    height: 100%;
-    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
+    height: 100%;
+    width: 100%;
 }
 
 .monacoEditorContainer{
-    width: 100%;
-    height: 100%;
+    flex: 1 1 fit-content;
     display: flex;
     flex-flow: column;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;   
 }
 
 .monacoEditor{
-    flex: 1 0 auto;
-    width: 100%;
+    flex: 1 1 fit-content; 
+    height: 100%;
+    width: 100%; 
     align-items: center;
-    /* height: calc(100% - 100px); */
-
 }
 
 .chartTitle{
